
  [ gregor herrmann ]
  * Add Provides and Replaces to lib/Debian/Control/Stanza{,/Binary}.pm.

  [ Salvatore Bonaccorso ]
  * debian/copyright: Update to revision 135 of DEP5 Format-Specification for
    machine readable copyright file. 
  * Referesh template for debian/copyright to follow the revision 135 or DEP5
    Format-Specification. Update URI of the format specification.

 -- Salvatore Bonaccorso <salvatore.bonaccorso@gmail.com>  Sat, 26 Dec 2009 13:45:44 +0100

dh-make-perl (0.61) unstable; urgency=low

  [ Salvatore Bonaccorso ]
  * Update template license text for debian/copyright to follow the DEP5
    Format-Specification at http://dep.debian.net/deps/dep5/. Update texts
    layout and drop use of License-Alias: Perl.

  [ gregor herrmann ]
  * Make sure we use the original $ENV{'PWD'} before CPAN::Distribution::get()
    resets it, otherwise the package ends up under $HOME/.cpan with the --cpan
    option.
  * Add a note to the disclaimer in the generated debian/copyright file.
  * Remove README, it's just an excerpt of the POD/manpage.
  * debian/copyright: convert to the DEP5 format.

  [ Damyan Ivanov ]
  * when considering a core module dependency, use 'perl' package instead of
    'perl-modules'

 -- gregor herrmann <gregoa@debian.org>  Wed, 11 Nov 2009 17:10:05 +0100

dh-make-perl (0.60) unstable; urgency=low

  [ Ryan Niebur ]
  * fix MANIFEST file handling
  * use Test::DistManifest
  * add missing requires for Parse::DebControl
  * add missing build_requires on File::Touch
  * Update ryan52's email address

  [ gregor herrmann ]
  * Re-add "NO_NETWORK=1" to tests in debian/rules, got lost somewhere.
  * Only add a dependency on perl-modules if we need a newer version than the
    one in oldstable.
  * Documentation fix for Debian::Version::deb_ver_cmp.
  * Add perl (>= 5.10) to as a preferred alternative to libmodule-build-perl.
  * Check if the possible examples directory is actually a directory before