@@ -5,6 +5,7 @@ Build-Depends: debhelper (>= 7.0.50),
  perl (>= 5.10) | libmodule-build-perl
 Build-Depends-Indep: perl,
  libapt-pkg-perl,
+ libarray-unique-perl,
  libclass-accessor-perl,
  libemail-date-format-perl,
  libfile-find-rule-perl,
@@ -42,6 +43,7 @@ Architecture: all
 Depends: debhelper (>= 7), ${perl:Depends}, ${misc:Depends},
  make, dpkg-dev, fakeroot,
  libapt-pkg-perl,
+ libarray-unique-perl,
  libclass-accessor-perl,
  libemail-date-format-perl,
  liblist-moreutils-perl,
